src/test/ui/span/issue-24805-dropck-trait-has-items.stderr
error[E0597]: `d1` does not live long enough
  --> $DIR/issue-24805-dropck-trait-has-items.rs:37:27
   |
LL |     _d = D_HasSelfMethod(&d1);
   |                           ^^ borrowed value does not live long enough
LL | }
   | - `d1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `d1` does not live long enough
  --> $DIR/issue-24805-dropck-trait-has-items.rs:43:34
   |
LL |     _d = D_HasMethodWithSelfArg(&d1);
   |                                  ^^ borrowed value does not live long enough
LL | }
   | - `d1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `d1` does not live long enough
  --> $DIR/issue-24805-dropck-trait-has-items.rs:49:21
   |
LL |     _d = D_HasType(&d1);
   |                     ^^ borrowed value does not live long enough
LL | }
   | - `d1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0597`.
